Fix login alignment

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -8,12 +8,15 @@ body {
     background-color: #f0f0f0;
  }
  
- .login-container {
+ .login-container, input {
     width: 300px;
     padding: 20px;
     background-color: #fff;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
+    display: block;
+   margin-left: auto;
+   margin-right: auto;
  }
  
  h2 {
@@ -27,8 +30,10 @@ body {
  }
  
  input {
-    padding: 4px;
-    margin-top: 5px;
+   width: 100%;
+   padding: 8px;
+   margin-top: 5px;
+   box-sizing: border-box;
  }
  
  button {
